Columns receive correct cards and flip over uncovered cards

--- a/app/css/stylesheet.styl
+++ b/app/css/stylesheet.styl
@@ -68,8 +68,11 @@ body
     .card
         float right
         margin-left 0.25em
-        .slot
-            cursor default
+
+#foundation
+#tableau
+    .slot
+        cursor default
 
 #tableau
     clear both
